# XFB

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .zenodo.json  ARCH_LINUX_RELEASE_SUMMARY.md  ARCH_QUICK_REFERENCE.txt  AUR_SUBMISSION_CHECKLIST.md  AUR_UPDATE_NEEDED.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBIAN_VS_ARCH_COMPARISON.md  DISTRIBUTION_SUMMARY.md  Dockerfile.arch-test  Dockerfile.debian-build  KEYBOARD_SHORTCUTS_ANALYSIS.md  Makefile  PKGBUILD  QUICK_START_RELEASE.md  READ ME  README.md  RELEASE_GUIDE.md  RELEASE_STATUS.md  UPDATE_AUR_NOW.md  WHAT_WAS_PUSHED.md  XFB.desktop  XFB.icns  XFB.pro  aboutus.h  aboutus.ui  adb.db  add_full_dir.cpp  add_music_single.cpp  add_music_single.h  add_program.cpp  add_pub.cpp  addgenre.cpp  addjingle.h  (+76 more)
src/: .directory  .qmake.stash  AdView.qml  AdView_qml.cpp  ArtworkStore.cpp  ArtworkStore.h  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists_minimal.txt  Dockerfile  LevelMeter.cpp  LevelMeter.h  Makefile  PlayerIntegration.cpp  PlaylistWaveView.cpp  PlaylistWaveView.h  READ ME  README  ThemeManager.cpp  ThemeManager.h  XFB.desktop  XFB.pro  XFB.pro.user.99f9ecb.4.8-pre1  XFB.pro.user.aee1b1f  XFB.pro.user.aee1b1f.4.8-pre1  XFB.pro.user.f80f0be  aboutus.cpp  aboutus.ui  adb.db  add_full_dir.cpp  add_full_dir.h  add_full_dir.ui  add_music_single.cpp  add_music_single.ui  add_program.cpp  add_program.h  add_program.ui  add_pub.cpp  add_pub.h  add_pub.ui  (+65 more)
src/.qtc_clangd/: compile_commands.json
src/.qtc_clangd/.cache/clangd/index/: QAction.E69608A7080F4926.idx  QApplication.FB1AC9037C8F3BFC.idx  QAudio.F203EAEF85F886FE.idx  QAudioDecoder.B65B61F1ADB5DD4E.idx  QAudioDeviceInfo.42B997E42F9544AB.idx  QAudioInput.595A14504F6A1BE2.idx  QAudioProbe.CB26668FC4BD5599.idx  QAudioRecorder.913DA2EEA3F1DFDF.idx  QByteArray.9CF73DA86DD5FE68.idx  QCheckBox.9573F05B9DA81792.idx  QComboBox.15083CC810A259DF.idx  QCommonStyle.2C1FA20782DC6948.idx  QDate.4691CD892EA33FA0.idx  QDateEdit.DCF396153DF3A640.idx  QDateTime.CD01307BB02C7A9B.idx  QDateTimeEdit.E993A7001695C699.idx  QDialog.7E0FF9D62DB06A5E.idx  QDir.39C9E39CFDF6223C.idx  QDirIterator.2FD422B11F50C4F1.idx  QDrag.5ECFCC2B2B2D120A.idx  QDragEnterEvent.9D6E438E2B1BD75F.idx  QDragMoveEvent.87CC9055544BB857.idx  QEvent.023C1333C9BB4927.idx  QFileDialog.688C374F42D0197D.idx  QFileInfo.1FD646B891A0A353.idx  QFlags.97F552CEEF866879.idx  QFormLayout.B29840EA356EF7A2.idx  QFrame.48AECB5BCD7A1B1B.idx  (+702 more)
src/audio/: FxDsp.cpp  FxDsp.h  FxEngine.cpp  FxEngine.h  FxParams.h  FxPlayer.cpp  FxPlayer.h  WaveformStore.cpp  WaveformStore.h
src/controllers/: MainController.cpp  MainController.h  ModernSignalConnections.h  PlayerUIController.cpp  PlayerUIController.h
src/dialogs/: AccessibilityPreferencesDialog.cpp  AccessibilityPreferencesDialog.h  AccessibilityPreferencesDialog.ui  AudioFxDialog.cpp  AudioFxDialog.h  EnhancedAddDirectoryDialog.cpp  EnhancedAddDirectoryDialog.h  EnhancedAddMusicSingleDialog.cpp  EnhancedAddMusicSingleDialog.h
src/icons/: .directory
src/linux-cross/: qmake.conf
src/models/: MusicListModel.cpp  MusicListModel.h
src/repositories/: DatabaseMigrator.cpp  DatabaseMigrator.h  GenreRepository.cpp  GenreRepository.h  MusicRepository.cpp  MusicRepository.h  PlaylistRepository.cpp  PlaylistRepository.h
src/resources/: darkstylesheet.qss  statusbar_fix.qss  stylesheet.qss
src/services/: ATSPIConnectionManager.cpp  ATSPIConnectionManager.h  AccessibilityErrorHandler.cpp  AccessibilityErrorHandler.h  AccessibilityManager.cpp  AccessibilityManager.h  AccessibilityMemoryOptimizer.cpp  AccessibilityMemoryOptimizer.h  AccessibilityPerformanceMonitor.cpp  AccessibilityPerformanceMonitor.h  AccessibilitySettingsService.cpp  AccessibilitySettingsService.h  AccessibilityValidator.cpp  AccessibilityValidator.h  AccessibleHelpSystem.cpp  AccessibleHelpSystem.h  AccessiblePlaylistInterface.cpp  AccessiblePlaylistInterface.h  AccessibleTableEditingEnhancer.cpp  AccessibleTableEditingEnhancer.h  AccessibleTableInterface.cpp  AccessibleTableInterface.h  AudioFeedbackService.cpp  AudioFeedbackService.h  AudioSearchService.h  AudioService.cpp  AudioService.h  BackgroundOperationFeedback.cpp  BackgroundOperationFeedback.h  BaseService.cpp  BaseService.h  BrailleDisplayService.cpp  BrailleDisplayService.h  ConfigurationService.cpp  ConfigurationService.h  ContextSensitiveHelpService.cpp  ContextSensitiveHelpService.h  DatabaseGridKeyboardNavigationEnhancer.cpp  DatabaseGridKeyboardNavigationEnhancer.h  DatabaseOptimizer.cpp  (+43 more)
src/ui/: ProgressIndicatorWidget.cpp  ProgressIndicatorWidget.h
tests/: CMakeLists.txt  test_utils.cpp  test_utils.h
tests/accessibility/: TestKeyboardTrapDetection.cpp
tests/integration/: CMakeLists.txt  TestAccessibilityIntegration.cpp  TestAccessibilityIntegration.h  TestAccessibilityUserAcceptance.cpp  TestAccessibilityUserAcceptance.h  TestDatabaseService.cpp  TestDatabaseService.h  TestORCACompatibility.cpp  TestORCACompatibility.h  TestPlayerUIController.cpp  TestPlayerUIController.h  test_app_integration.cpp
tests/performance/: CMakeLists.txt  TestMusicListModelPerformance.cpp  TestMusicListModelPerformance.h
tests/ui/: CMakeLists.txt  TestEnhancedMusicDialogs.cpp  TestEnhancedMusicDialogs.h
tests/unit/: CMakeLists.txt  test_config.cpp  test_database.cpp
tests/unit/controllers/: TestMainController.cpp  TestMainController.h
tests/unit/repositories/: TestDatabaseMigrator.cpp  TestDatabaseMigrator.h  TestGenreRepository.cpp  TestGenreRepository.h  TestMusicRepository.cpp  TestMusicRepository.h  TestPlaylistRepository.cpp  TestPlaylistRepository.h
tests/unit/services/: TestAccessibilityManager.cpp  TestAudioService.cpp  TestAudioService.h  TestBaseService.cpp  TestBaseService.h  TestDatabaseOptimizer.cpp  TestDatabaseOptimizer.h  TestDatabaseService.cpp  TestDatabaseService.h  TestErrorHandler.cpp  TestErrorHandler.h  TestInputValidator.cpp  TestInputValidator.h  TestKeyboardShortcuts.cpp  TestLogger.cpp  TestLogger.h  TestMusicCache.cpp  TestMusicCache.h  TestServiceContainer.cpp  TestServiceContainer.h
(+80 files in other folders)
